Fixed mobile menu vertical overflow

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -4,6 +4,8 @@
 
 @layer components {
   .content {
+    @apply px-4 py-3 mb-8 bg-white rounded-lg shadow-md;
+
     ul {
       @apply list-disc ml-5 mb-4;
       li p {
